use grid to split sections

--- a/index.html
+++ b/index.html
@@ -8,70 +8,104 @@
     <link rel="stylesheet" href="stylesheet.css">
   </head>
 <body>
-  <div class="upper-container">
-      <p>
+  <div class="wall">
+    <ul class="section-1 container">
+      <li class="card">
         notion
         <br>想法,概念,見解 n.
-      </p>
-
-    <p>
-      context
-      <br>上下文,語境 n.
-    </p>
-    <p>
-      resonance
-      <br>共鳴 n.</br>
-    </p>
-    <p>
-      conviction
-      <br>信念 n.
-    </p>
-    <p>
-      discourse
-      <br>論述 n.
-    </p>
-    <p>
-      pivotal
-      <br>樞軸的 adj.
-      <br>(to success)
-    </p>
-    <p>
-      publicity
-      <br>傳播、宣傳 n.
-    </p>
+      </li>
+      <li class="card">
+        context
+        <br>上下文,語境 n.
+      </li>
+      <li class="card">
+        resonance
+        <br>共鳴 n.</br>
+      </li>
+      <li class="card">
+        conviction
+        <br>信念 n.
+      </li>
+      <li class="card">
+        discourse
+        <br>論述 n.
+      </li>
+      <li class="card">
+        pivotal
+        <br>樞軸的 adj.
+        <br>(to success)
+      </li>
+      <li class="card">
+        publicity
+        <br>傳播、宣傳 n.
+      </li>
+    </ul>
+    <ul class="section-2 container">
+      <li class="card">
+        denotation
+        <br>表達,意義, n.</br>
+      </li>
+      <li class="card">
+        connotation
+        <br>言外之意 n.</br>
+      </li>
+      <li class="card">
+        traits
+        <br>特徵 n.</br>
+      </li>
+      <li class="card">
+        proliferate
+        <br>使增殖,使擴散 v.
+      </li>
+      <li class="card">
+        radical
+        <br>根本的/激進的 adj.
+      </li>
+      <li class="card">
+        emancipate
+        <br>解放 v. adj.
+      </li>
+      <li class="card">
+        impasse
+        <br>僵局 n.
+      </li>
+    </ul>
+    <ul class="section-3 container">
+      <li class="card">
+        proliferate
+        <br>使增殖,使擴散 v.
+      </li>
+      <li class="card">
+        radical
+        <br>根本的/激進的 adj.
+      </li>
+      <li class="card">
+        emancipate
+        <br>解放 v. adj.
+      </li>
+      <li class="card">
+        impasse
+        <br>僵局 n.
+      </li>
+    </ul>
+    <ul class="section-4 container">
+      <li class="card">
+        proliferate
+        <br>使增殖,使擴散 v.
+      </li>
+      <li class="card">
+        radical
+        <br>根本的/激進的 adj.
+      </li>
+      <li class="card">
+        emancipate
+        <br>解放 v. adj.
+      </li>
+      <li class="card">
+        impasse
+        <br>僵局 n.
+      </li>
+    </ul>
   </div>
-  <div class="lower-container">
-    <p>
-      denotation
-      <br>表達,意義, n.</br>
-    </p>
-    <p>
-      connotation
-      <br>言外之意 n.</br>
-    </p>
-    <p>
-      traits
-      <br>特徵 n.</br>
-    </p>
-    <p>
-      proliferate
-      <br>使增殖,使擴散 v.
-    </p>
-    <p>
-      radical
-      <br>根本的/激進的 adj.
-    </p>
-    <p>
-      emancipate
-      <br>解放 v. adj.
-    </p>
-    <p>
-      impasse
-      <br>僵局 n.
-    </p>
-
-  </div>
-
-
 </body>
 </html>
