--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
         impasse
         <br>僵局 n.
       </li>
+      <li class="card red">
+        emily
+        <br>美麗的妹妹 n.
+      </li>
     </ul>
   </div>
 </body>
