--- a/index.html
+++ b/index.html
@@ -15,26 +15,119 @@
         <br>想法,概念,見解 n.
       </li>
       <li class="card">
+        affiliation
+        <br>關聯 n.
+      </li>
+      <li class="card">
+        ambiguity
+        <br>模棱兩可 n.
+      </li>
+      <li class="card">
+        discrete
+        <br>抽象的 adj.
+      </li>
+      <li class="card">
+        cognoscenti
+        <br>鑑賞家 n.
+      </li>
+      <li class="card">
+        promiscuous
+        <br>混雜(雜交) adj.
+      </li>
+      <li class="card">
         context
         <br>上下文,語境 n.
+      </li>
+      <li class="card">
+        terrain
+        <br>(知識的)領域 n.
+      </li>
+      <li class="card">
+        essence
+        <br>本質,精闢 n.
+      </li>
+      <li class="card">
+        postivistic
+        <br>實證主義的 adj.
+      </li>
+      <li class="card">
+        psychedelic
+        <br>迷幻的 adj.
+      </li>
+      <li class="card">
+        epistemology
+        <br>認識論 n.
       </li>
       <li class="card">
         resonance
         <br>共鳴 n.</br>
       </li>
       <li class="card">
+        consensus
+        <br>共識 n.
+      </li>
+      <li class="card">
+        discursive
+        <br>(假定)推論的/偽命題 n.
+      </li>
+      <li class="card">
+        rudimentary
+        <br>初級的,起碼 adj.
+      </li>
+      <li class="card">
+        antagonism
+        <br>對抗性 n.
+      </li>
+      <li class="card">
+        ------
+        <br>------ -.
+      </li>
+      <li class="card">
         conviction
         <br>信念 n.
+      </li>
+      <li class="card">
+        regime
+        <br>政權 n.
+      </li>
+      <li class="card">
+        bourgeoisie
+        <br>中產階級 n.
+      </li>
+      <li class="card">
+        bureaucracies
+        <br>官僚 n.
+      </li>
+      <li class="card">
+        hegemonic
+        <br>霸權 adj.
+      </li>
+      <li class="card">
+        multilateral
+        <br>多邊的 adj.
       </li>
       <li class="card">
         discourse
         <br>論述 n.
       </li>
       <li class="card">
+        narrative
+        <br>敘述 n.
+      </li>
+      <li class=“card”></li>
+      <li class=“card”></li>
+      <li class=“card”></li>
+      <li class=“card”></li>
+      <li class="card">
         pivotal
         <br>樞軸的 adj.
         <br>(to success)
       </li>
+      <li class=“card”></li>
+      <li class=“card”></li>
+      <li class=“card”></li>
+      <li class=“card”></li>
+      <li class=“card”></li>
       <li class="card">
         publicity
         <br>傳播、宣傳 n.
@@ -42,33 +135,101 @@
     </ul>
     <ul class="section-2 container">
       <li class="card">
-        denotation
-        <br>表達,意義, n.</br>
+        discern
+        <br>辨別 v.</br>
       </li>
       <li class="card">
-        connotation
-        <br>言外之意 n.</br>
+        tendency
+        <br>傾向 n.</br>
       </li>
       <li class="card">
-        traits
-        <br>特徵 n.</br>
+        yield
+        <br>產出 v.</br>
       </li>
       <li class="card">
-        proliferate
-        <br>使增殖,使擴散 v.
+        censor
+        <br>審視 v.
       </li>
       <li class="card">
-        radical
-        <br>根本的/激進的 adj.
+        qualm
+        <br>疑慮 n.
       </li>
       <li class="card">
-        emancipate
-        <br>解放 v. adj.
+        ruminate
+        <br>咀嚼深思 v.
       </li>
       <li class="card">
-        impasse
-        <br>僵局 n.
+        articulation
+        <br>傳達清晰度,關節,發音 n.
       </li>
+      <li class="card">
+        disseminate
+        <br>傳散 v.
+      </li>
+      <li class="card">
+        perceive
+        <br>感知 v.
+      </li>
+      <li class="card">
+        obfuscate
+        <br>混淆 v.
+      </li>
+      <li class="card">
+        intriguingly
+        <br>有趣的 adv.
+      </li>
+      <li class="card">
+        deploy
+        <br>部署,調配 v.
+      </li>
+      <li class="card">
+        presupposition
+        <br>前提 n.
+      </li>
+      <li class="card">
+        dispersion
+        <br>分散,傳散 n.
+      </li>
+      <li class="card">
+        manifest
+        <br>表明 v.
+      </li>
+      <li class="card">
+        implicitly
+        <br>含蓄,隱隱 adj.
+      </li>
+      <li class="card">
+        axiomatic
+        <br>毋庸置疑 adj.
+      </li>
+      <li class=“card”></li>
+      <li class="card">
+        conceive
+        <br>構想出 v.
+      </li>
+      <li class="card">
+        decipher
+        <br>解碼 v. n.
+      </li>
+      <li class="card">
+        convey
+        <br>傳達 v.
+      </li>
+      <li class="card">
+        paradigm
+        <br>典範 n.
+      </li>
+      <li class=“card”></li>
+      <li class=“card”></li>
+      <li class="card">
+        heuristic
+        <br>啟發的 adj. n.
+      </li>
+      <li class=“card”></li>
+      <li class=“card”></li>
+      <li class=“card”></li>
+      <li class=“card”></li>
+      <li class=“card”></li>
     </ul>
     <ul class="section-3 container">
       <li class="card">
