--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <br>模棱兩可 n.
       </li>
       <li class="card">
+        obscure
+        <br>模糊,隱蔽 v.
+      </li>
+      <li class="card">
         discrete
         <br>抽象的 adj.
       </li>
@@ -55,6 +59,10 @@
         <br>迷幻的 adj.
       </li>
       <li class="card">
+        hypnotic
+        <br>催眠 adj.
+      </li>
+      <li class="card">
         epistemology
         <br>認識論 n.
       </li>
@@ -78,10 +86,7 @@
         antagonism
         <br>對抗性 n.
       </li>
-      <li class="card">
-        ------
-        <br>------ -.
-      </li>
+
       <li class="card">
         conviction
         <br>信念 n.
@@ -103,8 +108,20 @@
         <br>霸權 adj.
       </li>
       <li class="card">
+        subjugate
+        <br>征服 v.
+      </li>
+      <li class="card">
         multilateral
         <br>多邊的 adj.
+      </li>
+      <li class="card">
+        diplomatic
+        <br>外交的 adj.
+      </li>
+      <li class="card">
+        epochs
+        <br>時代 n.
       </li>
       <li class="card">
         discourse
@@ -114,20 +131,16 @@
         narrative
         <br>敘述 n.
       </li>
-      <li class=“card”></li>
-      <li class=“card”></li>
-      <li class=“card”></li>
-      <li class=“card”></li>
+      <li class="card">
+        parcellization
+        <br>碎片化 adj.
+      </li>
       <li class="card">
         pivotal
         <br>樞軸的 adj.
         <br>(to success)
       </li>
-      <li class=“card”></li>
-      <li class=“card”></li>
-      <li class=“card”></li>
-      <li class=“card”></li>
-      <li class=“card”></li>
+
       <li class="card">
         publicity
         <br>傳播、宣傳 n.
@@ -137,6 +150,10 @@
       <li class="card">
         discern
         <br>辨別 v.</br>
+      </li>
+      <li class="card">
+        negated
+        <br>否定 v.
       </li>
       <li class="card">
         tendency
@@ -149,6 +166,10 @@
       <li class="card">
         censor
         <br>審視 v.
+      </li>
+      <li class="card">
+        interrogated
+        <br>審問 n.
       </li>
       <li class="card">
         qualm
@@ -173,6 +194,10 @@
       <li class="card">
         obfuscate
         <br>混淆 v.
+      </li>
+      <li class="card">
+        tautological
+        <br>九官鳥式的 adj.
       </li>
       <li class="card">
         intriguingly
@@ -202,7 +227,7 @@
         axiomatic
         <br>毋庸置疑 adj.
       </li>
-      <li class=“card”></li>
+
       <li class="card">
         conceive
         <br>構想出 v.
@@ -219,48 +244,251 @@
         paradigm
         <br>典範 n.
       </li>
-      <li class=“card”></li>
-      <li class=“card”></li>
+
       <li class="card">
         heuristic
         <br>啟發的 adj. n.
       </li>
-      <li class=“card”></li>
-      <li class=“card”></li>
-      <li class=“card”></li>
-      <li class=“card”></li>
-      <li class=“card”></li>
+
     </ul>
     <ul class="section-3 container">
+
       <li class="card">
-        proliferate
-        <br>使增殖,使擴散 v.
+        comprise
+        <br>包含 v.
       </li>
       <li class="card">
-        radical
-        <br>根本的/激進的 adj.
+        associates
+        <br>聯想 v.
       </li>
       <li class="card">
-        emancipate
-        <br>解放 v. adj.
+        stem from
+        <br>出於
       </li>
       <li class="card">
-        impasse
-        <br>僵局 n.
+        explicate
+        <br>解釋 v.
       </li>
+      <li class="card">
+        linguistic
+        <br>語言的 adj.
+      </li>
+      <li class="card">
+        leverage
+        <br>利用 n.
+      </li>
+      <li class="card">
+        exploit
+        <br>剝削的利用 v.
+      </li>
+      <li class="card">
+        imbued
+        <br>充滿 v.
+      </li>
+      <li class="card">
+        deviant
+        <br>異常 adj.
+      </li>
+      <li class="card">
+        entitlement
+        <br>授權 n.
+      </li>
+      <li class="card">
+        deductive
+        <br>演繹 adj.
+      </li>
+      <li class="card">
+        a priori
+        <br>由演繹推論的 adj.adv.
+      </li>
+      <li class="card">
+        corollary
+        <br>必然的(結論) n. adj.
+      </li>
+      <li class="card">
+        immanent
+        <br>內在的 adj.
+      </li>
+      <li class="card">
+        impetus
+        <br>推動力 n.
+      </li>
+      <li class="card">
+        stigmatize
+        <br>污名化 v.
+      </li>
+      <li class="card">
+        valorize
+        <br>賦予價格 v.
+      </li>
+      <li class="card">
+        empirical
+        <br>靠體驗的 adj.
+      </li>
+      <li class="card">
+        protocal
+        <br>(通訊)協議 n.
+      </li>
+      <li class="card">
+        homogenous
+        <br>同質的 adj.
+      </li>
+      <li class="card">
+        constituent
+        <br>構成,份子 n. adj.
+      </li>
+      <li class="card">
+        appartuses
+        <br>設備,儀器 n.
+      </li>
+      <li class="card">
+        myriad
+        <br>無數 adj. 五花八門 n.
+      </li>
+      <li class="card">
+        dynamic
+        <br>活躍,劇烈 adj.
+      </li>
+      <li class="card">
+        agitation
+        <br>攪動 n.
+      </li>
+      <li class="card">
+        upheaval
+        <br>劇變 n.
+      </li>
+      <li class="card">
+        impede
+        <br>阻礙 v.
+      </li>
+      <li class="card">
+        dilapidated
+        <br>年久失修 adj.
+      </li>
+      <li class="card">
+        subterfuge
+        <br>托辭 n.
+      </li>
+
     </ul>
     <ul class="section-4 container">
       <li class="card">
-        proliferate
-        <br>使增殖,使擴散 v.
+        denotation
+        <br>意義 n.
+      </li>
+      <li class="card">
+        connotation
+        <br>言外之意 n.
+      </li>
+      <li class="card">
+        syntagmatic
+        <br>象徵性的 n.
+      </li>
+      <li class="card">
+        reciprocity
+        <br>互惠 n.
+      </li>
+      <li class="card">
+        arbitrary
+        <br>隨意獨斷的 adj.
+      </li>
+      <li class="card">
+        reminiscent
+        <br>令人回想的 adj.
+      </li>
+
+      <li class="card">
+        traits
+        <br>特徵 n.
+      </li>
+      <li class="card">
+        semantic
+        <br>語義的 adj.
+      </li>
+      <li class="card">
+        tacit
+        <br>心照不宣的 不言而喻的 adj.
+      </li>
+      <li class="card">
+        unutterable
+        <br>難以言喻 adj.
+      </li>
+      <li class="card">
+        nuance
+        <br>細微的 adj.
+      </li>
+      <li class="card">
+        ambivalent
+        <br>心情矛盾的 n.
       </li>
       <li class="card">
         radical
         <br>根本的/激進的 adj.
       </li>
       <li class="card">
+        paranoid
+        <br>偏執狂 adj. n.
+      </li>
+      <li class="card">
+        paradoxical
+        <br>弔詭的 adj.
+      </li>
+      <li class="card">
+        absurd
+        <br>荒謬的 悖理的 adj.
+      </li>
+      <li class="card">
+        complicit
+        <br>共犯的 adj.
+      </li>
+      <li class="card">
+        perpetrated
+        <br>犯下 n.
+      </li>
+      <li class="card">
+        perpetuate
+        <br>常存 v.
+      </li>
+      <li class="card">
+        inherently
+        <br>本來就有的 adj.
+      </li>
+      <li class="card">
+        indispensable
+        <br>不可或缺的 adj.
+      </li>
+      <li class="card">
+        proliferate
+        <br>使增殖,使擴散 v.
+      </li>
+      <li class="card">
+        amplify
+        <br>放大 v.
+      </li>
+      <li class="card">
+        pervasive
+        <br>無所不在蔓延的 adj.
+      </li>
+      <li class="card">
+        exponential
+        <br>指數成長的 adj.
+      </li>
+      <li class="card">
+        nuked
+        <br>（用核武）毀滅 v.
+      </li>
+
+      <li class="card">
         emancipate
         <br>解放 v. adj.
+      </li>
+      <li class="card">
+        profane
+        <br>褻瀆 v. adj.
+      </li>
+      <li class="card">
+        sacred
+        <br>神聖的 adj.
       </li>
       <li class="card">
         impasse
