--- a/index.html
+++ b/index.html
@@ -143,7 +143,12 @@
         publicity
         <br>傳播、宣傳 n.
       </li>
+      <li class="card">
+        altruistic
+        <br>利他的 adj.
+      </li>
     </ul>
+    
     <ul class="section-2 container">
       <li class="card">
         discern
@@ -152,6 +157,18 @@
       <li class="card">
         negated
         <br>否定 v.
+      </li>
+      <li class="card">
+        denounce
+        <br>(被大眾)譴責 v.
+      </li>
+      <li class="card">
+        detract
+        <br>貶低價值 v.
+      </li>
+      <li class="card">
+        vulgar
+        <br>庸俗 adj. n.
       </li>
       <li class="card">
         tendency
@@ -364,6 +381,10 @@
         <br>阻礙 v.
       </li>
       <li class="card">
+      rupture
+      <br>破裂 n. v.
+    </li>
+      <li class="card">
         dilapidated
         <br>年久失修 adj.
       </li>
@@ -496,6 +517,15 @@
         impasse
         <br>僵局 n.
       </li>
+      <li class="card">
+        autarky
+        <br>自給自足的 n.
+      </li>
+      <li class="card">
+        egalitarian
+        <br>平均主義的 adj. n.
+      </li>
+
       <li class="card red">
         emily
         <br>美麗的妹妹 n.
