--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
+  <a href="index2021SP.html" target="_self">2021SP Vocabulary</a>
 <div class="wall">
   <ul class="section-1 container">
     <li class="card">
