--- a/index2021SP.html
+++ b/index2021SP.html
@@ -12,8 +12,24 @@
 <div class="wall">
   <ul class="section-1 container">
     <li class="newin">
-      suffice
-      <br>滿足 v.</br>
+      teleological
+      <br>目的論的 adj.</br>
+    </li>
+    <li class="newin">
+      narratologically
+      <br>敘事地 adj.</br>
+    </li>
+    <li class="newin">
+      hermeneutic
+      <br>詮釋學 n.</br>
+    </li>
+    <li class="newin">
+      subsume
+      <br>將⋯⋯納入</br>
+    </li>
+    <li class="newin">
+      schematically
+      <br>(概要,原理圖)示意地 adj.</br>
     </li>
     <li class="newin">
       abstrusely
@@ -75,6 +91,22 @@
       ushered
       <br>迎來 v.</br>
     </li>
+    <li class="newin">
+      solemnity
+      <br>嚴肅,莊重 n.</br>
+    </li>
+    <li class="newin">
+      austere
+      <br>嚴峻,簡素 adj.</br>
+    </li>
+    <li class="newin">
+      suffice
+      <br>滿足 v.</br>
+    </li>
+    <li class="newin">
+      resentful
+      <br>不滿的 adj.</br>
+    </li>
 
   </ul>
 
@@ -82,6 +114,10 @@
     <li class="newin">
       polemical
       <br>有爭論性的 adj.</br>
+    </li>
+    <li class="newin">
+      dissident
+      <br>異己,意見相左的 n. adj.</br>
     </li>
     <li class="newin">
       reactionary
@@ -116,12 +152,28 @@
       <br> 據稱 adv.</br>
     </li>
     <li class="newin">
+      didactic
+      <br> 說教的 adj.</br>
+    </li>
+    <li class="newin">
       solicit
       <br>徵求 v.</br>
     </li>
     <li class="newin">
+      entice
+      <br>誘惑,勾引 v.</br>
+    </li>
+    <li class="newin">
       rejoinder
       <br>(針對性的)回覆 n.</br>
+    </li>
+    <li class="newin">
+      reticence
+      <br>沈默寡言 n.</br>
+    </li>
+    <li class="newin">
+      hinterland
+      <br>腹地(內陸) n.</br>
     </li>
 
   </ul>
@@ -142,6 +194,10 @@
     <li class="newin">
       superseded
       <br>取而代之 v.</br>
+    </li>
+    <li class="newin">
+      ineluctable
+      <br>不可避免的 adj.</br>
     </li>
     <li class="newin">
       pertaining
@@ -179,9 +235,33 @@
       dejection
       <br>沮喪 n.</br>
     </li>
+    <li class="newin">
+      thorny
+      <br>棘手的 adj.</br>
+    </li>
     <li class="cardr">
       reparations
       <br>賠償 n.</br>
+    </li>
+    <li class="cardr">
+      redemption
+      <br>贖回 n.</br>
+    </li>
+    <li class="newin">
+      reciprocating
+      <br>往復,報答 v.</br>
+    </li>
+    <li class="cardr">
+      repression
+      <br>抑制 n.</br>
+    </li>
+    <li class="newin">
+      languid
+      <br>懶的 adj.</br>
+    </li>
+    <li class="newin">
+      depraved
+      <br>墮落的 adj.</br>
     </li>
 
   </ul>
@@ -247,12 +327,24 @@
       <br>穿孔 v.</br>
     </li>
     <li class="newin">
+      inscribe
+      <br>題詞,刻寫/內 v.</br>
+    </li>
+    <li class="newin">
+      mnemonic
+      <br>幫助記憶的 adj.</br>
+    </li>
+    <li class="newin">
       eradicate
       <br>毀滅 v.</br>
     </li>
     <li class="newin">
       undermined
       <br>被毀於一旦 v.</br>
+    </li>
+    <li class="newin">
+      ruthless
+      <br>殘酷 adj.</br>
     </li>
     <li class="newin">
       labyrinthine
@@ -263,8 +355,24 @@
       <br>誘人的 adj.</br>
     </li>
     <li class="newin">
+      abduct
+      <br>拐,脅持 v.</br>
+    </li>
+    <li class="newin">
+      gaudy
+      <br>俗麗 adj.</br>
+    </li>
+    <li class="newin">
       canonization
       <br>奉為聖旨 n.</br>
+    </li>
+    <li class="newin">
+      kaleidoscopic
+      <br>萬花筒般 adj.</br>
+    </li>
+    <li class="newin">
+      mercenary
+      <br>唯利是圖的 adj.</br>
     </li>
 
   </ul>
